# FFmpegSimpleDE

./: .gitignore  CMakeLists.txt  test.c
savde/: CMakeLists.txt  savde.c
saved/: .saved.h.un~  CMakeLists.txt  android_utils.c  android_utils.h  audioresample.c  audioresample.h  codec.c  codec.h  codec_context.h  decoder.c  decoder.h  define.h  encoder.c  encoder.h  format.c  format.h  internal.c  internal.h  internal_context.c  internal_context.h  log.c  log.h  mediacodec_ndk_decoder.c  mediacodec_ndk_decoder.h  opt.c  opt.h  saved.c  saved.h  saved.h~  videofilter.c  videofilter.h  videoscale.c  videoscale.h
